--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Benjamin Ricaud
 logo: /assets/img/bricaud.jpg
-description: Researcher @ EPFL, Switzerland. Graphs, data science, machine learning.
+description: Researcher @ EPFL, Switzerland. Graphs, data science, machine learning. benjamin.ricaud[at]epfl.ch
