--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,10 @@
 
 theme: jekyll-theme-minimal
 title: Benjamin Ricaud
-logo: /assets/img/bricaud.jpg
+logo: /assets/img/Benjaminroundbwsmall.png
 description: Researcher @ EPFL, Switzerland. Graphs, data science, machine learning. benjamin.ricaud[at]epfl.ch
 email: benjamin.ricaud@epfl.ch
-#baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 #url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: GBR_data
 github_username:  bricaud
