--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 theme: jekyll-theme-minimal
 title: Benjamin Ricaud
 logo: /assets/img/Benjaminroundbwsmall.png
-description: Researcher @ EPFL, Switzerland. Graphs, data science, machine learning. benjamin.ricaud[at]epfl.ch
+description: Researcher @ EPFL, Switzerland, on the move to University of Tromsø, Norway. Graphs, data science, machine learning. benjamin.ricaud[at]epfl.ch
 email: benjamin.ricaud@epfl.ch
 baseurl: "" # the subpath of your site, e.g. /blog
 #url: "" # the base hostname & protocol for your site, e.g. http://example.com
